--- a/coding/os/linux/内存泄漏-原因、避免以及定位.md
+++ b/coding/os/linux/内存泄漏-原因、避免以及定位.md
@@ -108,7 +108,17 @@ C/C++语言中，内存的分配与回收都是由开发人员在编写代码时
 
 栈一块连续的内存块，栈上的内存分配就是在这一块连续内存块上进行操作的。编译器在编译的时候，就已经知道要分配的内存大小，当调用函数时候，其内部的遍历都会在栈上分配内存；当结束函数调用时候，内部变量就会被释放，进而将内存归还给栈。
 
-`class Object {     public:       Object() = default;       // ....   };      void fun() {     Object obj;          // do sth   }   `
+```
+class Object {
+ public:
+  Object() = default;
+  // ....
+};
+void fun() {   
+  Object obj;          
+  // do sth
+}
+```
 
 在上述代码中，obj就是在栈上进行分配，当出了fun作用域的时候，会自动调用Object的析构函数对其进行释放。
 
