--- a/test/阿卡西记录.md
+++ b/test/阿卡西记录.md
@@ -4,4 +4,6 @@
 
 "他能以清净、超人的天眼，见到有情的死时、生时，低贱、高贵，美丽、丑陋，幸福、不幸，能了知有情各随其业：‘诸尊者，此有情的确因为具足身恶行，具足语恶行，具足意恶行，诽谤圣者，为邪见者，受持邪见业；诸尊者，他们身坏死后，生于苦界、恶趣、堕处、地狱。然而，诸尊者，此有情的确因为具足身善行，具足语善行，具足意善行，不诽谤圣者，为正见者，受持正见业；诸尊者，他们身坏死后，生于善趣、天界。’如此能以清净、超人的天眼，见到有情的死时、生时，低贱、高贵，美丽、丑陋，幸福、不幸，能了知有情各随其业。" - 南传《中部》
 
+"当时，世尊是这样告诉诸比丘的：「我以超人清净的天眼，亲眼目睹众生死亡时、出生时，美、丑，或妙、或不妙，他们轮回往来在善趣及与恶道之间的奥秘，善恶业力如影随形跟随着众生，我都看得一清二楚。我发现如果有众生成就身恶行，口、意恶行，诽谤圣人，邪见成就及具足邪见业，他们将因这些恶业缘，死后必将投生至恶道，转生到地狱中；若有众生成就身妙行，口、意妙等善行，不诽谤圣人，正见成就并具足正见业，他们将因此善业缘，死后必投生至善处，乃至转生到天界" - 《中阿含64经/天使经(王相应品)》
+
 “有物浑成，先天地生。寂兮寥兮，独立而不改，周行而不怠，可以为天下母。吾不知其名，强字之曰道” - 《老子道德经 第二十五章》
