--- a/test/2024-09-01.md
+++ b/test/2024-09-01.md
@@ -6,3 +6,5 @@
 2. 大量乃至超大量阅读各种实例，从各种不同角度剖析同一件事物；
 
 如果你更新了一篇笔记，更正了它所有的格式，但你没有更新其他笔记，你很容易就会陷入一种更新强迫症，只是在更新格式，而没有吸收信息和学习新东西。
+
+关于混圈子：你看的是什么（精神食粮），也是在混精神圈子。
