--- a/coding/cpp/grammar/i_C++20那些事之宇宙飞船运算符.md
+++ b/coding/cpp/grammar/i_C++20那些事之宇宙飞船运算符.md
@@ -22,20 +22,20 @@ Original lightcity 光城  _2024年07月12日 15:33_ _广东_
 注：懒人版，本节示例已更新星球。
 
 用法：`<=>`
-
+```cpp
 `#include <compare>   #include <iostream>      int main() {      auto c1 = 1.1 <=> 2.2;      auto c2 = -1 <=> 1;      std::cout << typeid(c1).name() << std::endl;      std::cout << typeid(c2).name() << std::endl;   }      `
-
+```
 输出：
-
-`St16partial_ordering   St15strong_ordering   `
-
+```cpp
+St16partial_ordering   St15strong_ordering
+```
 1. `1.1 <=> 2.2`：这是对两个浮点数进行比较。对于浮点数，标准库返回的是`std::partial_ordering`，因为浮点数有NaN值的存在，这使得它们之间的比较不是严格的全序。`std::partial_ordering`允许结果是`<`、`>`、`==`或者`unordered`。
     
 
 我们可以使用gcc代码静态变量来查看partial_ordering到底是小于、大于、等于、无序：
-
-`static const partial_ordering less;   static const partial_ordering equivalent;   static const partial_ordering greater;   static const partial_ordering unordered;   `
-
+```cpp
+static const partial_ordering less;   static const partial_ordering equivalent;   static const partial_ordering greater;   static const partial_ordering unordered;
+```
 如果我们强制转换便会报错：
 
 `comp.cc:6:36: error: conversion from 'std::partial_ordering' to non-scalar type 'std::strong_ordering' requested       6 |   std::strong_ordering c1 = 1.1 <=> 2.2;   `
