--- a/0x01-leetcode/2-dimensional/tree/binary-search-tree/e_783. Minimum Distance Between BST Nodes.md
+++ b/0x01-leetcode/2-dimensional/tree/binary-search-tree/e_783. Minimum Distance Between BST Nodes.md
@@ -1,4 +1,4 @@
-Given a Binary Search Tree (BST) with the root node `root`, return the minimum difference between the values of any two different nodes in the tree.
+Given a Binary Search Tree (BST) with the root node `root`, return the **minimum difference** between the values of any two different nodes in the tree.
 
 Example :
 
