--- a/coding/os/linux/network/（超）低延迟视频流传输的未来.md
+++ b/coding/os/linux/network/（超）低延迟视频流传输的未来.md
@@ -1,15 +1,8 @@
-
 原创 Anthony Dantard LiveVideoStack
-
  _2022年06月20日 08:00_ _北京_
-
- ![图片](https://mmbiz.qpic.cn/mmbiz_gif/CZeKj44ymYb6QUdXv920pGAbVpVibIRSOmK8niadDbovEdl2K6g9wNsxiciaSCOKTsWGYsQzjaOr1jia4sJFWRQyjsg/640?wx_fmt=gif&wxfrom=13&tp=wxpic) 点击上方“LiveVideoStack”关注我们
-
-> 作者：Anthony Dantard
-> 
-> 翻译：Alex
-> 
-> 技术审校：袁荣喜
+作者：Anthony Dantard
+翻译：Alex
+技术审校：袁荣喜
 
 ![图片](https://mmbiz.qpic.cn/mmbiz_png/CZeKj44ymYbCEFCGw3StscoQ2E8Tfa94FUqDzREvuqQ4HbdEJfdp7Rjnu0d1Pvg9lGBZyxS6MY6MCvicNqHm3DQ/640?wx_fmt=png&wxfrom=13&tp=wxpic)
 
