--- a/coding/os/linux/schedule/i_进程切换分析（3）：同步处理.md
+++ b/coding/os/linux/schedule/i_进程切换分析（3）：同步处理.md
@@ -1,54 +1,44 @@
 作者：[linuxer](http://www.wowotech.net/author/3 "linuxer") 发布于：2017-12-11 17:59 分类：[进程管理](http://www.wowotech.net/sort/process_management)
-
-一、前言
+# 一、前言
 
 本文主要描述了主调度器（schedule函数）中的同步处理。
-
-二、进程调度简介
+# 二、进程调度简介
 
 进程切换有两种，一种是当进程由于需要等待某种资源而无法继续执行下去，这时候只能是主动将自己挂起（调用schedule函数），引发一次任务调度过程。另外一种是进程被抢占。所谓抢占（preempt）就是在当前进程欢快执行的时候，终止其对CPU资源的占用，切换到另外一个更高优先级的进程执行。进程被抢占往往是由于各种调度事件的发生：
 
 1、 时间片用完
-
 2、 在中断上下文中唤醒其他优先级更高的进程
-
 3、 在其他进程上下文中唤醒其他优先级更高的进程。
-
 4、 在其他进程上下文中修改了其他进程的调度参数
-
 5、 ……
 
 在当前进程被抢占的场景下，调度并不是立刻发生，而是延迟执行，具体的方法是设定当前进程的need_resched等于1，然后静静的等待最近一个调度点的来临，当调度点到来的时候，内核会调用schedule函数，抢占当前task的执行。
 
 此外，我们还需要了解基本的抢占控制的知识。在一个进程的thread info中有一个preempt_count的成员用来控制抢占，当该成员等于0的时候表示允许抢占，在本文中，我们分别用preempt counter、hardirq counter和softirq counter分别表示其中的bit field。更详细的描述可以参考[相关文档](http://www.wowotech.net/irq_subsystem/soft-irq.html)的描述
-
-三、schedule函数使用了哪些同步机制
+# 三、schedule函数使用了哪些同步机制
 
 schedule函数的代码框架如下：
+```cpp
+asmlinkage visible void __sched schedule(void) {  
+do {  
+  preempt_disable();－－－－－－－－－－－－－－－－－a
+**raw_spin_lock_irq(&rq->lock);－－－－－－－－b**
 
-> asmlinkage __visible void __sched schedule(void)  
-> {  
->     do {  
->         preempt_disable();－－－－－－－－－－－－－－－－－a
-> 
->                 **raw_spin_lock_irq(&rq->lock);－－－－－－－－b**
-> 
->                 选择next task
-> 
->                 切到next task执行
-> 
->                **raw_spin_unlock_irq(&rq->lock);** －－－－－－－c  
->         sched_preempt_enable_no_resched(); －－－－－－－－d  
->     } while (need_resched()); －－－－－－－－－－－－－－－e  
-> }
+选择next task
 
+切到next task执行
+
+**raw_spin_unlock_irq(&rq->lock);** －－－－－－－c  
+sched_preempt_enable_no_resched(); －－－－－－－－d  
+} while (need_resched()); －－－－－－－－－－－－－－－e  
+}
+```
 我们以X进程切换到Y进程为例，描述schedule函数中同步机制的使用情况。在X进程上下文中，a点首先关闭了抢占，X task的preempt counter会加1。然后在b点会持有该CPU runqueue的spinlock，当然在这个过程中会disable CPU中断处理，同时将X task的preempt counter再次加1，这时候X task的preempt counter应该等于2。
 
 打开X task的抢占的时候是在重新调度X在某个CPU上执行的时候，这时候，在上面代码中的c和d点来递减preempt counter，当进入e点的时候，preempt counter已经等于0。
 
 由于在切换过长设计runqueue队列的操作，因此需要spin lock来保护。不过在进程切换过程中，runqueue spin lock是不同进程来协同处理的。我们仍然以X进程切换到Y进程为例。在X进程中，在b点持锁并disable了本地中断，而spin lock的释放是在Y进程中完成的（c点），在释放spin lock的同时，也会打开cpu中断。
-
-四、可不可以禁止抢占的时候调用schedule函数
+# 四、可不可以禁止抢占的时候调用schedule函数
 
 在进程上下文中，下面的调用序列是否可以呢？
 
